# tictactoe

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_ttf.cmake
src/: board.cpp  board.hpp  game.cpp  game.hpp  gamestates.hpp  main.cpp
